Agregando dos capas nuevas y licencia [NUEVAS]  * Ahora se tienen las capas "cabello" y "extras".  * Se agrega un ejemplo del resultado.
[MODIFICACIONES]
 * Se agrega la licencia al código.
 * Se corriguieron algunos errores al momento de seleccionar las capas y
   características desde el editor del modelo vtuber.
 * Se cambió el README oara que vaya acorde a la aplicación.
 * Se arregló el script para linux.

[POR HACER]
 * Compresión de imágenes.
 * Imagen de un ratón para simular un ratón en movimiento.