@@ -12,10 +12,12 @@ function pause {
   echo ""
 }
 
-EXEC="app.Main"
+EXEC="app.AppLauncher"
 RES_DIR="../src/main/resources"
 SRC_DIR="../src/main/java"
-JAVA_PRIN="../src/main/java/app/Main.java"
+JAVA_PRIN="../src/main/java/app/AppLauncher.java"
+FLAG="--verbose"
+# --verbose --log --debug
 
 
 # Pregunta al usuario si desea compilar
@@ -30,7 +32,7 @@ done
 comp:
 if [[ ! -d ./bin ]]; then mkdir bin; fi
 echo "=== Compilando código fuente ==="
-javac -d ../bin -sourcepath "$SRC_DIR" -cp ../lib/* "$JAVA_PRIN"
+javac -d ../bin -sourcepath "$SRC_DIR" --module-path "../lib/javafx-17.0.15" --add-modules javafx.graphics,javafx.controls,javafx.fxml -cp "../lib/*:../lib/javafx-17.0.15/*" "$JAVA_PRIN"
 
 echo "=== Copiando recursos ==="
 cp -r "$RES_DIR"/* ../bin/
@@ -38,7 +40,7 @@ cp -r "$RES_DIR"/* ../bin/
 # Ejecutar el programa compilado
 exe:
 echo "=== Ejecutando el programa ==="
-java -cp ../bin:../lib/* "$EXEC"
+java -cp "../bin:../lib/*:../lib/javafx-17.0.15/*" --module-path "../lib/javafx-17.0.15" --add-modules javafx.graphics,javafx.controls,javafx.fxml "$EXEC" "$FLAG"
 pause
 
 exit
